- Catch count + graph if died - meta-seo populated + share card image - overflow scroll bugfix - beginning of catcher bonuses + points - js bugfix

--- a/source/stylesheets/default.styl
+++ b/source/stylesheets/default.styl
@@ -40,6 +40,5 @@ body
 	background-color $main-bg
 	color $body
 	overflow-x hidden
-	min-height 100%
 	position relative
 	 
